# grus_codegen

./: .gitmodules  Cargo.toml  README.md  notes.md
.cargo/: config.toml
filetests/: 0001_constant_i64.clif  0002_arithmetic_add_i64_i32_i16_i8.clif  0002_arithmetic_i64_i32.clif  0003_more_instructions.clif  0004_arithmetic_sub_i64_i32_i16_i8.clif  0005_arithmetic_mul_i64_i32_i16_i8.clif  0006_branch_diverge.clif  0006a_jump.clif  0006b_branch_diverge.clif  0006c_branch_diverge_simpler.clif  0006d_conditionals.clif  0006e_conditional_branch.clif  0007_for_loop.clif  average.clif
filetests/upstream/: README.md
grus_codegen/: Cargo.toml
grus_codegen/examples/: compile_cl.rs  compile_grus.rs  regalloc_panic.rs  tool.rs
grus_codegen/src/: clif_support.rs  codegen.rs  isa.rs  lib.rs  lir.rs  main.rs  regalloc.rs  target_isa.rs  trap.rs
grus_codegen/tests/: test_incremental.rs  test_upstream.rs
grus_module/: Cargo.toml
grus_module/src/: lib.rs
grus_regalloc/: Cargo.toml
grus_regalloc/src/: lib.rs  svg.rs  wrapper.rs
grus_testing/: Cargo.toml
grus_testing/src/: lib.rs
grus_testing/tests/: test_upstream.rs
grus_testing/upstream/filetests/runtests/: const.clif
src/: main.rs
