[workspace]
resolver = "2"

members = [
    "grus_codegen",
    "grus_module",
]

[workspace.dependencies]
grus_codegen = { path = "grus_codegen", default-features = false }
grus_module = { path = "grus_module", default-features = false }
grus_testing = { path = "grus_testing", default-features = false }



#cranelift-codegen = {path="../../../bytecodealliance/wasmtime/cranelift/codegen", features=["x86", "arm64"]}
#cranelift-reader = {path="../../../bytecodealliance/wasmtime/cranelift/reader"}
#cranelift-jit = {path="../../../bytecodealliance/wasmtime/cranelift/jit"}
#cranelift-module = {path="../../../bytecodealliance/wasmtime/cranelift/module"}
#cranelift-native = {path="../../../bytecodealliance/wasmtime/cranelift/native"}
#cranelift-object = {path="../../../bytecodealliance/wasmtime/cranelift/object"}



target-lexicon = {version="0.13.1"}


cranelift = "0.116.1"
cranelift-reader = "0.116.1"
cranelift-native = "0.116.1"
cranelift-object = "0.116.1"
cranelift-module = "0.116.1"
cranelift-jit = "0.116.1"
thiserror = "2"

object = "0.36.7"

cranelift-codegen = {version="0.116.1", features=["x86", "arm64"]}

clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"

log = "0.4.25"
env_logger = "0.11.6"
smallvec = "1.13.2"
arrayvec = "0.7.6"

