[package]
name = "grus_codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]

target-lexicon = {version="0.13.1"}

#cranelift-codegen = {path="../../../bytecodealliance/wasmtime/cranelift/codegen", features=["x86", "arm64"]}
#cranelift-reader = {path="../../../bytecodealliance/wasmtime/cranelift/reader"}
#cranelift-jit = {path="../../../bytecodealliance/wasmtime/cranelift/jit"}
#cranelift-module = {path="../../../bytecodealliance/wasmtime/cranelift/module"}
#cranelift-native = {path="../../../bytecodealliance/wasmtime/cranelift/native"}
#cranelift-object = {path="../../../bytecodealliance/wasmtime/cranelift/object"}


cranelift-codegen = {version="0.116.1", features=["x86", "arm64"]}
cranelift-reader = "0.116.1"
cranelift-jit = "0.116.1"
cranelift-module = "0.116.1"
cranelift-native = "0.116.1"
cranelift-object = "0.116.1"
cranelift = "0.116.1"
