[package]
name = "grus_codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]

target-lexicon = {workspace = true}


cranelift-codegen = {workspace = true}
cranelift-reader = {workspace = true}
cranelift = {workspace = true}


anyhow = {workspace=true}
grus_module = {workspace=true}

log = { workspace = true }

[dev-dependencies]
cranelift-native = {workspace = true}
cranelift-object =  {workspace = true}
cranelift-module = {workspace = true}
cranelift-jit = {workspace = true}

clap =  {workspace = true}


env_logger = { workspace = true }


