[package]
name = "grus_codegen"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]

target-lexicon = { workspace = true }


cranelift-codegen = { workspace = true }
cranelift-reader = { workspace = true }
cranelift = { workspace = true }


anyhow = { workspace = true }
grus_module = { workspace = true }
grus_regalloc = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }

#smallvec = { workspace = true }
arrayvec = { workspace = true }
regalloc2 = { workspace = true }
serde = { workspace = true }

serde_json = { workspace = true }


#############################################################
[dev-dependencies]
cranelift-native = { workspace = true }
cranelift-object = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }

clap = { workspace = true }


env_logger = { workspace = true }
serde_json = { workspace = true }


walkdir = "2.5.0"
