[package]
name = "grus_module"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]

memmap = "0.7.0"

object = {workspace = true}

cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-codegen = { workspace = true }


anyhow = {workspace=true}

log = { workspace = true }
