[package]
name = "grus_regalloc"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]


anyhow = { workspace = true }
regalloc2 = { workspace = true }
cranelift-codegen = { workspace = true }

thiserror = { workspace = true }


# For the register allocation plots.
svg = "0.18.0"
svg_util = { git = "https://github.com/iwanders/svg_rs_util", rev = "d81192e69fda7d2f20d3ca5d26037a2ab7213638" }
